# balance_engine

./: .gitignore  Cargo.toml  README.md  index.html  pyproject.toml
cleaned_data/: boundary_conditions_clean.csv  preprocessing_metadata.txt  supply_demand_clean.csv  yield_clean.csv
examples/: engine.py  example_00.rs  main-tester.py  main-tester.rs  main_tester.rs  multi-period.py  multi-period.rs  product-mix.py  product-mix.rs  test_good_lp.rs
plugins/mcp/: main.py  pyproject.toml  server.py
plugins/voice/: capture.py  pyproject.toml
python/balance_engine/: __init__.py
python/engine/: engine.pyd
python/tests/: test_all.py
resources/: attributions.md  phase-1-detailed-explanation.md
src/: lib.rs
src/engine/: mod.rs
