[package]
name = "balance_engine"
version = "0.1.0"
edition = "2021"
authors = ["Fernando Bryan Reza Campos <fer.rezac@outlook.com>"]
description = "A simple balance engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "balance_engine"
crate-type = ["cdylib"]

[dependencies]
dev_utils = "0.1.1"


[dependencies.pyo3]
version = "0.24.0"
features = ["abi3-py38", "extension-module"]
