# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [project]
# name = "balance-engine-voice"
# version = "0.1.0"
# description = "Voice capture and transcription plugin for Balance Engine using Whisper"
# requires-python = ">=3.10"
# dependencies = [
#     "openai-whisper>=v20240930",
#     "PyAudio>=0.2.13",
#     "numpy>=1.24.0",
#     "torch>=2.0.0",
# ]

# [tool.uv]
# python-requirements = ">=3.10"

# [project.optional-dependencies]
# dev = [
#     "pytest",
# ]